--- a/package.json
+++ b/package.json
@@ -25,6 +25,14 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-compress": "^0.13.0",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-cssmin": "^0.11.0",
+    "grunt-contrib-uglify": "^0.7.0",
+    "grunt-filerev": "^2.1.2",
+    "grunt-usemin": "^3.0.0",
     "load-grunt-tasks": "^2.0.0",
     "lodash.assign": "^2.4.1"
   }
