--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "grunt-contrib-cssmin": "^0.11.0",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-filerev": "^2.1.2",
+    "grunt-ng-annotate": "^0.9.2",
     "grunt-usemin": "^3.0.0",
     "load-grunt-tasks": "^2.0.0",
     "lodash.assign": "^2.4.1"
