--- a/bower.json
+++ b/bower.json
@@ -14,9 +14,11 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.3.1",
     "less": "~2.2.0",
     "angular": "~1.3.8",
     "lodash": "~2.4.1"
+  },
+  "devDependencies": {
+    "bootstrap-3.3.2": "bootstrap#3.3.2"
   }
 }
