--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "name": "Instant Bootstrap",
   "version": "0.0.1",
   "description": "Customize Bootstrap 3 on your page instantly!",
-
+  "options_page": "panel/index.html",
   "devtools_page": "devtools.html",
   "background": {
     "scripts": [
