--- a/bootstrap/3.3.2/config.json
+++ b/bootstrap/3.3.2/config.json
@@ -126,13 +126,7 @@
     "@dropdown-link-active-bg": "@component-active-bg",
     "@dropdown-link-disabled-color": "@gray-light",
     "@dropdown-header-color": "@gray-light",
-    "@dropdown-caret-color": "#000",
-    "@zindex-navbar": "1000",
-    "@zindex-dropdown": "1000",
-    "@zindex-popover": "1060",
-    "@zindex-tooltip": "1070",
-    "@zindex-navbar-fixed": "1030",
-    "@zindex-modal": "1040"
+    "@dropdown-caret-color": "#000"
   },
   "Media queries breakpoints": {
     "@screen-xs": "480px",
