--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,11 @@
     "lodash": "~2.4.1"
   },
   "devDependencies": {
-    "bootstrap-3.3.2": "bootstrap#3.3.2"
+    "bootstrap-3.3.2": "bootstrap#3.3.2",
+    "bootstrap-3.3.1": "bootstrap#3.3.1",
+    "bootstrap-3.3.0": "bootstrap#3.3.0",
+    "bootstrap-3.2.0": "bootstrap#3.2.0",
+    "bootstrap-3.1.1": "bootstrap#3.1.1",
+    "bootstrap-3.1.0": "bootstrap#3.1.0"
   }
 }
